--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.2",
+    "@zeit/next-sass": "^1.0.1",
     "next": "9.2.1",
+    "node-sass": "^4.13.1",
     "react": "16.12.0",
     "react-dom": "16.12.0"
   }
